--- a/style.css
+++ b/style.css
@@ -1,14 +1,29 @@
 body{
     background-color: #fffbf7;
     font-family: "Open Sans", sans-serif;
+    margin: 0;
 }
 
-
-h1{
+.main h1{
     color:#025157;
+    font-family: "Alegreya", serif;
+    font-size: 60px;
+    font-weight: 900;
 }
-p{
+.main p{
     color:darkgray; 
+
+}
+.main h4{
+    font-family: "Slabo 27px", serif;
+    font-size: 20px;
+    font-weight: 500;
+    
+}
+
+.main{
+    margin-top: 140px;
+    text-align: center;
 }
 
 .color_boton{
@@ -18,4 +33,43 @@ p{
 
 .color_promocional{
     color:grey;
+}
+
+.header{
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 0px;
+}
+
+.ul{
+    padding: 0;
+}
+.header li{
+    display: inline;
+    padding: 0;
+}
+
+.header > * {
+    display: inline-block;
+    font-size: 16px;
+    vertical-align: middle;
+}
+
+.header .logo{
+    width: 15%;
+}
+
+.header .navbar{
+    width: 70%;
+    text-align: center;
+}
+
+.header .actions{
+    width: 15%;
+    text-align: right;
+}
+
+.Start{
+    padding: 0;
 }
