--- a/style.css
+++ b/style.css
@@ -121,3 +121,103 @@ body{
     margin-top: 10px;
     vertical-align: middle;
 }
+
+/*sección 3 de GRID de CSS*/
+
+.features {
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+    height: auto;
+    background-color: #025157;
+    padding: 5% 10%;
+}
+
+.features .feature-card {
+    background-color: #ffffff;
+    margin: 0 15px 30px;
+    padding: 30px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.feature-content {
+    flex: 1;
+}
+
+.feature-content figure {
+    margin-left: 0;
+}
+
+.features .feature-card .feature-content img {
+    width: 50px;
+}
+
+.feature-image {
+    flex: 1;
+    width: 40%;
+    height: 80%;
+    position: relative;
+    right: -50px;
+}
+
+.feature-image figure {
+    height: 100%;
+    margin-top: 0;
+}
+.feature-image figure img {
+    height: 100%;
+    margin-top: 0;
+}
+
+  /*comenzamos lo responsive con media query */
+
+@media (max-width: 426px){
+    body{
+        background-color: aqua;
+    }
+    .actions,
+    .navbar{
+        display: none;
+    }
+    .header {
+        padding: 15px;
+        z-index: 1;
+        margin: 0px;
+    }
+    .main {
+        margin-top: 130px;
+    }
+    .main h1 {
+        font-size: 30px;
+    }
+    .main .imgcapterra {
+        width: 100%;
+    }
+    .promo {
+        flex-direction: column;
+        max-width: 90%;
+        width: unset;
+    }
+    .explanatory-video > video {
+        width: 100%;
+    }
+    .publish {
+        margin-top: 10px;
+    }
+    .publish h3 {
+        font-size: 25px;
+    }
+    .features {
+        display: inline-block;
+        width: 100%;
+        padding: 15px;
+    }
+    .feature-image{
+        display: none;
+    }
+    .feature-card {
+        padding: 10px;
+    }
+}
